Update build scripts

--- a/bin/build
+++ b/bin/build
@@ -1,33 +1,42 @@
 #!/bin/bash
 
+DEBUG=0
+
+# Parse command-line arguments
+for arg in "$@"; do
+    case $arg in
+        DEBUG=*)
+            DEBUG="${arg#*=}" # Extract the value after DEBUG=
+            shift # Remove argument from the list
+            ;;
+    esac
+done
+echo "DEBUG is set to ${DEBUG}"
+
 CU_PROF_DIR=$(pwd)
 if [ ! -f "${CU_PROF_DIR}/bin/build" ]; then
     echo "Please run this script in the root directory of CUProf"
     exit 1
 fi
 
-cd $CU_PROF_DIR
-# git submodule update --init --recursive
-
 cd $CU_PROF_DIR/sanalyzer/cxx_backtrace
 if [ ! -d "$CU_PROF_DIR/sanalyzer/cxx_backtrace/libbacktrace/backtrace" ]; then
     ./build_libbacktrace
 fi
 # ./build_libbacktrace
-make install BACKTRACE_DIR=$CU_PROF_DIR/sanalyzer/cxx_backtrace/libbacktrace/backtrace -j
+make -j install DEBUG=$DEBUG BACKTRACE_DIR=$CU_PROF_DIR/sanalyzer/cxx_backtrace/libbacktrace/backtrace
 
 cd $CU_PROF_DIR/sanalyzer/py_frame
-make install PYBDIN11_DIR=$CU_PROF_DIR/sanalyzer/py_frame/pybind11 -j
+make -j install DEBUG=$DEBUG PYBDIN11_DIR=$CU_PROF_DIR/sanalyzer/py_frame/pybind11
 
 cd $CU_PROF_DIR/sanalyzer
-make install SANITIZER_TOOL_DIR=$CU_PROF_DIR \
-             CXX_BACKTRACE_DIR=$CU_PROF_DIR/sanalyzer/cxx_backtrace/cxx_backtrace \
-             PY_FRAME_DIR=$CU_PROF_DIR/sanalyzer/py_frame/py_frame -j
+make -j install DEBUG=$DEBUG SANITIZER_TOOL_DIR=$CU_PROF_DIR \
+                CXX_BACKTRACE_DIR=$CU_PROF_DIR/sanalyzer/cxx_backtrace/cxx_backtrace \
+                PY_FRAME_DIR=$CU_PROF_DIR/sanalyzer/py_frame/py_frame
 
 cd $CU_PROF_DIR/tensor_scope
-make install -j
+make -j install DEBUG=$DEBUG
 
 cd $CU_PROF_DIR
-make SANALYZER_DIR=$CU_PROF_DIR/sanalyzer/sanalyzer \
-     TENSOR_SCOPE_DIR=$CU_PROF_DIR/tensor_scope/tensor_scope -j
-
+make -j DEBUG=$DEBUG SANALYZER_DIR=$CU_PROF_DIR/sanalyzer/sanalyzer \
+        TENSOR_SCOPE_DIR=$CU_PROF_DIR/tensor_scope/tensor_scope
